# xx.hocon

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
differential/: known-divergences.json
differential/adapters/: .gitignore  README.md
differential/adapters/py/: hocon_json.py  requirements.txt
differential/adapters/rs/: Cargo.toml
differential/adapters/ts/: hocon-json.mjs  package.json
docs/: compliance-matrix.md  ecosystem-conformance.md  extra-spec-conventions.md  fixture-conventions.md  harvested-corpus.md  spec-checklist.md
docs/test_results/: 20260407.md
ecosystem-bench/: .gitignore  Makefile  README.md  driver.py
ecosystem-bench/go-adapters/: go.mod  go.sum
ecosystem-bench/py-adapters/: requirements.txt
ecosystem-bench/py-adapters/adapters/: hocon_adapter.py  pyhocon_adapter.py
ecosystem-bench/ruby-adapters/: Gemfile  adapter.rb
ecosystem-bench/rust-adapters/: Cargo.toml
ecosystem-bench/ts-adapters/: package.json
ecosystem-bench/ts-adapters/adapters/: hocon-parser.mjs  o3co.mjs  (+1 more)
expected/hocon/: cycle-expected-error.json  file-include-expected.json  test01-expected.json  test02-expected.json  test03-expected.json  test04-expected.json  test09-expected.json  test10-expected.json  test11-expected.json  test12-expected.json  test13-application-override-substitutions-expected.json  test13-reference-bad-substitutions-expected-error.json  test13-reference-with-substitutions-expected.json
generate/: build.gradle.kts
testdata/format-ingestion/: manifest.json
testdata/harvested/: README.md
testdata/hocon/: env-variables.conf
(+702 files in other folders)
