[package]
name = "hocon-bench-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
o3co-hocon = { package = "hocon-parser", version = "1.8.0", features = ["serde"] }
mockersf-hocon = { package = "hocon", version = "0.9.0" }
serde_json = "1"
mikai-hocon = { version = "0.1.3", package = "hocon-rs" }

[[bin]]
name = "o3co"
path = "src/bin/o3co.rs"

[[bin]]
name = "mockersf"
path = "src/bin/mockersf.rs"

[[bin]]
name = "mikai"
path = "src/bin/mikai.rs"
